--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 dist: trusty
 language: php
 php:
-- 5.6
-- 7.0
-- 7.1
+- 7.2
 - hhvm
 sudo: false
 cache:
@@ -12,17 +10,13 @@ cache:
 matrix:
   fast_finish: true
   include:
-  - php: 5.6
-    env: SYMFONY_VERSION='2.7'
-  - php: 7.0
-    env: SYMFONY_VERSION='3.2'
-  - php: 7.1
-    env: SYMFONY_VERSION='3.2'
+  - php: 7.2
+    env: SYMFONY_VERSION='2.7.*'
+  - php: 7.2
+    env: SYMFONY_VERSION='3.4.*'
 before_script:
-- if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv
-  version-name)/etc/conf.d/travis.ini; fi
-- if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION;
-  fi
+- if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
+- if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/framework-bundle=$SYMFONY_VERSION; fi
 - composer update ${COMPOSER_FLAGS} --no-interaction
 script:
 - vendor/bin/phpunit --coverage-clover clover
