--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0"
+        "php": ">=7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
@@ -24,8 +24,9 @@
         "mockery/mockery": "^0.9.9"
     },
     "autoload": {
-        "psr-4": {
-            "Incompass\\SoftDeletableBundle\\": ""
-        }
+        "psr-4": { "Incompass\\SharedBundle\\": "src" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Tests\\Incompass\\SharedBundle\\": "tests" }
     }
 }
