--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
+        "phpunit/phpunit": "^6.2",
         "symfony/framework-bundle": "^2.7|^3.4.0",
         "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/orm": "^2.5",
-        "mockery/mockery": "^0.9.9"
+        "doctrine/orm": "^2.5"
     },
     "autoload": {
         "psr-4": { "Incompass\\SoftDeletableBundle\\": "src" }
