--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="Tests/bootstrap.php"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
+         backupGlobals="false"
+         colors="true"
+         bootstrap="vendor/autoload.php"
 >
 
     <php>
-        <server name="KERNEL_DIR" value="Tests" />
+        <server name="KERNEL_DIR" value="tests" />
     </php>
 
     <testsuites>
         <testsuite name="TimestampableBundle Test Suite">
-            <directory>./Tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>DependencyInjection</directory>
-            <directory>Entity</directory>
-            <directory>EventListener</directory>
-            <file>TimestampableBundle.php</file>
+            <directory suffix=".php">src</directory>
+            <exclude>
+                <directory>src/Entity</directory>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
